packages/flutter_wasmi/macos/Classes/frb.h

typedef struct DartCObject DartCObject;
typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct DartCObject *WireSyncReturn;
typedef struct wire_Value2_I32 {
  int32_t field0;
} wire_Value2_I32;
typedef struct wire_Value2_I64 {
  int64_t field0;
} wire_Value2_I64;
typedef struct wire_Value2_F32 {
  float field0;
} wire_Value2_F32;
typedef struct wire_Value2_F64 {
  double field0;
} wire_Value2_F64;
typedef struct wire_Value2_FuncRef {
  uint32_t field0;
} wire_Value2_FuncRef;
typedef struct wire_Value2_ExternRef {
  uint32_t field0;
} wire_Value2_ExternRef;
typedef union Value2Kind {
  struct wire_Value2_I32 *I32;
  struct wire_Value2_I64 *I64;
  struct wire_Value2_F32 *F32;
  struct wire_Value2_F64 *F64;
  struct wire_Value2_FuncRef *FuncRef;
  struct wire_Value2_ExternRef *ExternRef;
} Value2Kind;
typedef struct wire_Value2 {
  int32_t tag;
  union Value2Kind *kind;
} wire_Value2;
typedef struct wire_list_value_2 {
  struct wire_Value2 *ptr;
  int32_t len;
} wire_list_value_2;
typedef struct wire_WasmiInstanceId {
  uint32_t field0;
} wire_WasmiInstanceId;
typedef struct wire_WasmiModuleId {
  uint32_t field0;
} wire_WasmiModuleId;
typedef struct wire_list_value_ty {
  int32_t *ptr;
  int32_t len;
} wire_list_value_ty;
typedef struct wire_WasmMemoryType {
  uint32_t initial_pages;
  uint32_t *maximum_pages;
} wire_WasmMemoryType;
typedef struct wire_TableType2 {
  uint32_t min;
  uint32_t *max;
} wire_TableType2;
typedef struct wire_Global {
  const void *ptr;
} wire_Global;
typedef struct wire_Memory {
  const void *ptr;
} wire_Memory;
typedef struct wire_Table {
  const void *ptr;
} wire_Table;
typedef struct wire_Func {
  const void *ptr;
} wire_Func;
typedef struct wire_ExternalValue_Func {
  struct wire_Func field0;
} wire_ExternalValue_Func;
typedef struct wire_ExternalValue_Global {
  struct wire_Global field0;
} wire_ExternalValue_Global;
typedef struct wire_ExternalValue_Table {
  struct wire_Table field0;
} wire_ExternalValue_Table;
typedef struct wire_ExternalValue_Memory {
  struct wire_Memory field0;
} wire_ExternalValue_Memory;
typedef union ExternalValueKind {
  struct wire_ExternalValue_Func *Func;
  struct wire_ExternalValue_Global *Global;
  struct wire_ExternalValue_Table *Table;
  struct wire_ExternalValue_Memory *Memory;
} ExternalValueKind;
typedef struct wire_ExternalValue {
  int32_t tag;
  union ExternalValueKind *kind;
} wire_ExternalValue;
typedef struct wire_ModuleImport {
  struct wire_uint_8_list *module;
  struct wire_uint_8_list *name;
  struct wire_ExternalValue value;
} wire_ModuleImport;
typedef struct wire_list_module_import {
  struct wire_ModuleImport *ptr;
  int32_t len;
} wire_list_module_import;
void drop_opaque_Table(const void *ptr);
const void *share_opaque_Table(const void *ptr);
union ExternalValueKind *inflate_ExternalValue_Func(void);
union ExternalValueKind *inflate_ExternalValue_Global(void);
union ExternalValueKind *inflate_ExternalValue_Table(void);
union ExternalValueKind *inflate_ExternalValue_Memory(void);
union Value2Kind *inflate_Value2_I32(void);
union Value2Kind *inflate_Value2_I64(void);
union Value2Kind *inflate_Value2_F32(void);
union Value2Kind *inflate_Value2_F64(void);
union Value2Kind *inflate_Value2_FuncRef(void);
union Value2Kind *inflate_Value2_ExternRef(void);
void free_WireSyncReturn(WireSyncReturn ptr);