packages/wasmi/lib/src/bridge_generated.io.dart


  void drop_opaque_Table(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _drop_opaque_Table(
      ptr,
    );
  }

  late final _drop_opaque_TablePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'drop_opaque_Table');
  late final _drop_opaque_Table =
      _drop_opaque_TablePtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> share_opaque_Table(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _share_opaque_Table(
      ptr,
    );
  }

  late final _share_opaque_TablePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('share_opaque_Table');
  late final _share_opaque_Table = _share_opaque_TablePtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ExternalValueKind> inflate_ExternalValue_Func() {
    return _inflate_ExternalValue_Func();
  }

  late final _inflate_ExternalValue_FuncPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ExternalValueKind> Function()>>(
          'inflate_ExternalValue_Func');
  late final _inflate_ExternalValue_Func = _inflate_ExternalValue_FuncPtr
      .asFunction<ffi.Pointer<ExternalValueKind> Function()>();

  ffi.Pointer<ExternalValueKind> inflate_ExternalValue_Global() {
    return _inflate_ExternalValue_Global();
  }

  late final _inflate_ExternalValue_GlobalPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ExternalValueKind> Function()>>(
          'inflate_ExternalValue_Global');
  late final _inflate_ExternalValue_Global = _inflate_ExternalValue_GlobalPtr
      .asFunction<ffi.Pointer<ExternalValueKind> Function()>();

  ffi.Pointer<ExternalValueKind> inflate_ExternalValue_Table() {
    return _inflate_ExternalValue_Table();
  }

  late final _inflate_ExternalValue_TablePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ExternalValueKind> Function()>>(
          'inflate_ExternalValue_Table');
  late final _inflate_ExternalValue_Table = _inflate_ExternalValue_TablePtr
      .asFunction<ffi.Pointer<ExternalValueKind> Function()>();

  ffi.Pointer<ExternalValueKind> inflate_ExternalValue_Memory() {
    return _inflate_ExternalValue_Memory();
  }

  late final _inflate_ExternalValue_MemoryPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ExternalValueKind> Function()>>(
          'inflate_ExternalValue_Memory');
  late final _inflate_ExternalValue_Memory = _inflate_ExternalValue_MemoryPtr
      .asFunction<ffi.Pointer<ExternalValueKind> Function()>();

  ffi.Pointer<Value2Kind> inflate_Value2_I32() {
    return _inflate_Value2_I32();
  }

  late final _inflate_Value2_I32Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Value2Kind> Function()>>(
          'inflate_Value2_I32');
  late final _inflate_Value2_I32 =
      _inflate_Value2_I32Ptr.asFunction<ffi.Pointer<Value2Kind> Function()>();

  ffi.Pointer<Value2Kind> inflate_Value2_I64() {
    return _inflate_Value2_I64();
  }

  late final _inflate_Value2_I64Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Value2Kind> Function()>>(
          'inflate_Value2_I64');
  late final _inflate_Value2_I64 =
      _inflate_Value2_I64Ptr.asFunction<ffi.Pointer<Value2Kind> Function()>();

  ffi.Pointer<Value2Kind> inflate_Value2_F32() {
    return _inflate_Value2_F32();
  }

  late final _inflate_Value2_F32Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Value2Kind> Function()>>(
          'inflate_Value2_F32');
  late final _inflate_Value2_F32 =
      _inflate_Value2_F32Ptr.asFunction<ffi.Pointer<Value2Kind> Function()>();

  ffi.Pointer<Value2Kind> inflate_Value2_F64() {
    return _inflate_Value2_F64();
  }

  late final _inflate_Value2_F64Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Value2Kind> Function()>>(
          'inflate_Value2_F64');
  late final _inflate_Value2_F64 =
      _inflate_Value2_F64Ptr.asFunction<ffi.Pointer<Value2Kind> Function()>();

  ffi.Pointer<Value2Kind> inflate_Value2_FuncRef() {
    return _inflate_Value2_FuncRef();
  }

  late final _inflate_Value2_FuncRefPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Value2Kind> Function()>>(
          'inflate_Value2_FuncRef');
  late final _inflate_Value2_FuncRef = _inflate_Value2_FuncRefPtr
      .asFunction<ffi.Pointer<Value2Kind> Function()>();

  ffi.Pointer<Value2Kind> inflate_Value2_ExternRef() {
    return _inflate_Value2_ExternRef();
  }

  late final _inflate_Value2_ExternRefPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Value2Kind> Function()>>(
          'inflate_Value2_ExternRef');
  late final _inflate_Value2_ExternRef = _inflate_Value2_ExternRefPtr
      .asFunction<ffi.Pointer<Value2Kind> Function()>();

  void free_WireSyncReturn(
    WireSyncReturn ptr,
  ) {
    return _free_WireSyncReturn(
      ptr,
    );
  }

  late final _free_WireSyncReturnPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WireSyncReturn)>>(
          'free_WireSyncReturn');
  late final _free_WireSyncReturn =
      _free_WireSyncReturnPtr.asFunction<void Function(WireSyncReturn)>();
}

class _Dart_Handle extends ffi.Opaque {}

class wire_uint_8_list extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

class wire_Value2_I32 extends ffi.Struct {
  @ffi.Int32()
  external int field0;
}

class wire_Value2_I64 extends ffi.Struct {
  @ffi.Int64()
  external int field0;
}

class wire_Value2_F32 extends ffi.Struct {
  @ffi.Float()
  external double field0;
}

class wire_Value2_F64 extends ffi.Struct {
  @ffi.Double()
  external double field0;
}

class wire_Value2_FuncRef extends ffi.Struct {
  @ffi.Uint32()
  external int field0;
}

class wire_Value2_ExternRef extends ffi.Struct {
  @ffi.Uint32()
  external int field0;
}

class Value2Kind extends ffi.Union {
  external ffi.Pointer<wire_Value2_I32> I32;

  external ffi.Pointer<wire_Value2_I64> I64;

  external ffi.Pointer<wire_Value2_F32> F32;

  external ffi.Pointer<wire_Value2_F64> F64;

  external ffi.Pointer<wire_Value2_FuncRef> FuncRef;

  external ffi.Pointer<wire_Value2_ExternRef> ExternRef;
}

class wire_Value2 extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external ffi.Pointer<Value2Kind> kind;
}

class wire_list_value_2 extends ffi.Struct {
  external ffi.Pointer<wire_Value2> ptr;

  @ffi.Int32()
  external int len;
}

class wire_WasmiInstanceId extends ffi.Struct {
  @ffi.Uint32()
  external int field0;
}

class wire_WasmiModuleId extends ffi.Struct {
  @ffi.Uint32()
  external int field0;
}

class wire_list_value_ty extends ffi.Struct {
  external ffi.Pointer<ffi.Int32> ptr;

  @ffi.Int32()
  external int len;
}

class wire_WasmMemoryType extends ffi.Struct {
  @ffi.Uint32()
  external int initial_pages;

  external ffi.Pointer<ffi.Uint32> maximum_pages;
}

class wire_TableType2 extends ffi.Struct {
  @ffi.Uint32()
  external int min;

  external ffi.Pointer<ffi.Uint32> max;
}

class wire_Global extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

class wire_Memory extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

class wire_Table extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

class wire_Func extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

class wire_ExternalValue_Func extends ffi.Struct {
  external wire_Func field0;
}

class wire_ExternalValue_Global extends ffi.Struct {
  external wire_Global field0;
}

class wire_ExternalValue_Table extends ffi.Struct {
  external wire_Table field0;
}

class wire_ExternalValue_Memory extends ffi.Struct {
  external wire_Memory field0;
}

class ExternalValueKind extends ffi.Union {
  external ffi.Pointer<wire_ExternalValue_Func> Func;

  external ffi.Pointer<wire_ExternalValue_Global> Global;

  external ffi.Pointer<wire_ExternalValue_Table> Table;

  external ffi.Pointer<wire_ExternalValue_Memory> Memory;
}

class wire_ExternalValue extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external ffi.Pointer<ExternalValueKind> kind;
}

class wire_ModuleImport extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> module;

  external ffi.Pointer<wire_uint_8_list> name;

  external wire_ExternalValue value;
}

class wire_list_module_import extends ffi.Struct {
  external ffi.Pointer<wire_ModuleImport> ptr;

  @ffi.Int32()
  external int len;
}

typedef DartPostCObjectFnType = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Bool Function(DartPort port_id, ffi.Pointer<ffi.Void> message)>>;
typedef DartPort = ffi.Int64;
